# django_demo_for_deploy

./: Dockerfile  demo.py  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: OrderDetailViewTestCase  ProductCreateViewTestCase  ProductsListViewTestCase  quieries.sql  requirements.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: models.py  sitemap.py  urls.py  views.py
mysite/blogapp/templates/blogapp/: article_details.html  articles_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/main/: urls.py  views.py
mysite/main/templates/main/: base.html  index.html
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  login.html  profile_update_form.html  register.html  user-details.html  users_list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: base.html  error-message.html  error-request.html  file-upload.html  (+2 more)
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_alter_product_options_product_archived_and_more.py
(+27 files in other folders)
